--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -26,6 +26,9 @@
     <string name="thermal_gaming">Gaming</string>
     <string name="thermal_streaming">Streaming</string>
 
+    <!-- FPS Counter -->
+    <string name="fps_info_title">FPS Counter</string>
+
     <!-- Dirac settings -->
     <string name="dirac_title">Dirac sound enhancer</string>
     <string name="dirac_headset_title">Headset type</string>
